--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,15 @@
 <div class='container px-5 px-sm-0'>
+    <% if @book.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@book.errors.count, "error") %>が原因でこの記事を保存できませんでした</h2>
+        <ul>
+          <% @book.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
