--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,26 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+
+                  <!--いいね機能の追加-->
+          <% if book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to book_favorites_path(book), method: :delete do %>
+                ♥<%= book.favorites.count %>
+              <% end %>
+            </td>
+            <% else %>
+            <td>
+              <%= link_to book_favorites_path(book), method: :post do %>
+                ♡<%= book.favorites.count %>
+              <% end %>
+            </td>
+          <% end %>
+
+          <td>
+            <p><%= link_to "コメント数：#{book.post_comments.count} ", book_path(book.id) %></p>
+          </td>
+
       </tr>
     <% end %>
   </tbody>
