--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,9 +10,10 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
+          <td>
+            <%= link_to(@book.user) do %>
+              <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+              <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
@@ -22,23 +23,54 @@
           <% if @book.favorited_by?(current_user) %>
             <td>
               <%= link_to book_favorites_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %> 
+                ♥<%= @book.favorites.count %>
               <% end %>
             </td>
             <% else %>
             <td>
               <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %> 
+                ♡<%= @book.favorites.count %>
               <% end %>
             </td>
           <% end %>
+
+          <!--コメント機能-->
+          <td>
+            <p>コメント数：<%= @book.post_comments.count %></p>
+          </td>
 
           <% if current_user == @book.user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
+        <% @book.post_comments.each do |post_comment| %>
+          <tr>
+            <td>
+              <%= link_to(post_comment.user) do %>
+                <%= image_tag post_comment.user.get_profile_image, size:'50x50' %><br>
+                <%= post_comment.user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= post_comment.comment %>
+            </td>
+            <td>
+              <% if post_comment.user == current_user %>
+                <%= link_to 'Destroy', book_post_comment_path(post_comment.book, post_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
       </table>
-    </div>
+
+      <div class='col-md-12'>
+        <%= form_with model: [@book, @post_comment] do |f| %>
+          <%= f.text_area :comment, class: "form-control", placeholder: "コメントをここに" %>
+          <br>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
+
   </div>
 </div>
