--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,7 +11,30 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+
+        <td>
+          <h6>フォロー<%= user.following_user.count %></h6>
+        </td>
+        <td>
+          <h6>フォロワー<%= user.follower_user.count %></h6>
+        </td>
+
+      <% if current_user != user %>
+
+        <% if current_user.following?(user) %>
+          <td>
+            <%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete, class: "btn-sm btn-danger" %>
+          </td>
+        <% else %>
+          <td>
+            <%= link_to 'フォローする', user_relationships_path(user.id), method: :POST, class:"btn-sm" %>
+          </td>
+        <% end %>
+      <% end %>
+
         <td><%= link_to 'Show', user %></td>
+
+
       </tr>
     <% end %>
   </tbody>
