--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,36 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+	  <th>follows</th>
+	  <th>
+    <%= link_to follows_user_path(user) do %>
+      <%= user.following_user.count %>
+    <% end %>
+	  </th>
+  </tr>
+  <tr>
+	  <th>followers</th>
+  	<th>
+    <%= link_to followers_user_path(user) do %>
+      <%= user.follower_user.count %>
+    <% end %>
+  	</th>
+  </tr>
+  <tr>
+    <% if current_user != user %>
+      <% if current_user.following?(user) %>
+        <td>
+          <%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete, class: "btn-sm btn-danger" %>
+        </td>
+      <% else %>
+        <td>
+          <%= link_to 'フォローする', user_relationships_path(user.id), method: :POST, class:"btn-sm" %>
+        </td>
+      <% end %>
+    <% end %>
+  </tr>
+
 </table>
 
 <div class='row'>
